--- a/package.json
+++ b/package.json
@@ -21,10 +21,19 @@
   },
   "dependencies": {
     "@mantine/core": "7.15.1",
+    "@mantine/dates": "^7.15.1",
+    "@mantine/form": "^7.15.1",
     "@mantine/hooks": "7.15.1",
+    "@mantine/notifications": "^7.15.1",
+    "@tabler/icons-react": "^3.26.0",
+    "@tanstack/react-query": "^5.62.8",
+    "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.1"
+    "react-router-dom": "^7.0.1",
+    "recharts": "^2.15.0",
+    "vite": "^5.4.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
@@ -35,6 +44,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
+    "@types/node": "^22.10.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
@@ -55,7 +65,6 @@
     "stylelint-config-standard-scss": "^13.1.0",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.16.0",
-    "vite": "^6.0.1",
     "vite-tsconfig-paths": "^5.1.3",
     "vitest": "^2.1.6"
   },
