--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,7 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "paths": {
-      "@/*": ["./src/*"],
-      "@test-utils": ["./test-utils"]
+      "@/*": ["./src/*"]
     }
   },
   "include": ["src", "test-utils"]
